Fixed mobile nav z-index and removed unnecessary portal

--- a/src/components/navbar/styles.module.scss
+++ b/src/components/navbar/styles.module.scss
@@ -31,7 +31,7 @@
 // Nav menu
 .mobile_nav_menu {
   overflow-y: hidden;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   height: 100vh;
